fix(nav-header): add explicit width to avoid font flicker

--- a/src/components/nav-header.scss
+++ b/src/components/nav-header.scss
@@ -33,7 +33,7 @@ $top-header-main-nav-item-selected-color: $color--telenor-blue;
     line-height: inherit;
     margin-right: $grid-size * 6;
     position: relative;
-    width: 120px;
+    width: 130px;
   }
 
   &__logo {
